tests/negative/semantics/math_type_mismatch.stream
// EXPECT: Error
print(10 + true); // Error: Operator '+' requires Ints